# devdocs-rag-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.context/: PROJECT-SPEC.md
docs/: 01-embedding-extraction.md  02-vector-storage.md  03-rag-mcp-server-design.md  04-claude-code-integration.md  PROJECT-SPEC.md
evals/: README.md  run_eval.py  samsung_tv_eval.xml
scripts/: crawl_docs.py  crawl_samsung_docs.py  ingest.py
src/devdocs_rag/: config.py  embedding.py  server.py  store.py
src/devdocs_rag/ingest/: chunkers.py  doc_type.py  loaders.py  metadata.py  pipeline.py
src/devdocs_rag/utils/: logging.py
tests/: test_chunkers.py  test_doc_type.py  test_embedding.py  test_loaders.py  test_pipeline.py  test_server.py  test_store.py
