[project]
name = "devdocs-rag-mcp"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "langchain-text-splitters>=0.3",
    "unstructured[html,pdf]>=0.16",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
devdocs-rag-server = "devdocs_rag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devdocs_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
